<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />

</menu>