<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReaderActivity">

    <!-- Top Bar -->

    <!-- PDF View Container -->


        <!-- PDF View -->
        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_bg"
                android:backgroundTint="#11235A"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:elevation="5dp"
                app:layout_constraintBottom_toTopOf="@+id/pdfViewContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <!-- Add your top bar content here -->

                <TextView
                    android:id="@+id/tvBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/book_name"
                    android:textColor="@color/light_grey"
                    android:textSize="20sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/author_name"
                    android:textColor="@color/dark_grey"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBookName" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/toolbar_bottom_bg"
                android:backgroundTint="#11235A"
                android:elevation="5dp">

                <Button
                    android:text="@string/jump"
                    android:textColor="@color/transparent"
                    android:id="@+id/showDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/transparent"
                    android:shadowRadius="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/etCurrentPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/_000"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvTotalPage"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/etCurrentPage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/toggleDark"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:src="@drawable/moon_solid"
                    android:paddingStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/toggle_dark_mode"
                    tools:ignore="RtlSymmetry" />

                <ImageButton
                    android:id="@+id/infobtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:src="@drawable/circle_info_solid__1_"
                    android:paddingEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/info_on_current_file"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.github.barteksc.pdfviewer.PDFView>

</RelativeLayout>
